[package]
name = "redpitaya"
description = "Crate to manipulate redpitaya"
license = "MIT"
version = "0.30.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
repository = "https://github.com/yellow-pitaya/api.git"
documentation = "https://docs.rs/redpitaya/"
keywords = ["redpitaya"]
categories = ["api-bindings", "hardware-support"]
edition = "2018"

[dependencies]
libc = "0.2"

[dependencies.rp-sys]
path = "rp-sys"
version = "0.28"
optional = true

[features]
default = ["rp-sys"]
mock = ["rp-sys/mock"]

[badges]
travis-ci = { repository = "yellow-pitaya/api" }
gitlab = { repository = "yellow-pitaya/api" }

[package.metadata.docs.rs]
features = ["mock"]
no-default-features = true
