[workspace]
members = [
    "rp-sys",
    ".",
]

[package]
name = "redpitaya"
description = "Crate to manipulate redpitaya"
license = "MIT"
version = "0.31.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
repository = "https://github.com/yellow-pitaya/api.git"
documentation = "https://docs.rs/redpitaya/"
keywords = ["redpitaya"]
categories = ["api-bindings", "hardware-support"]
edition = "2018"

[dependencies]
libc = "0.2"

[dependencies.rp-sys]
path = "rp-sys"
version = "0.28"

[features]
default = ["v1_04"]
mock = ["rp-sys/mock"]
v0_98 = ["rp-sys/v0_98"]
v1_00 = ["v0_98", "rp-sys/v1_00"]
v1_03 = ["v1_00", "rp-sys/v1_03"]
v1_04 = ["v1_03", "rp-sys/v1_04"]

[badges]
travis-ci = { repository = "yellow-pitaya/api" }
gitlab = { repository = "yellow-pitaya/api" }

[package.metadata.docs.rs]
features = ["mock"]
no-default-features = true
