[workspace]
members = [
    "rp-sys",
    ".",
]

[package]
name = "redpitaya"
description = "Crate to manipulate redpitaya"
license = "MIT"
version = "0.31.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
repository = "https://github.com/yellow-pitaya/api.git"
documentation = "https://docs.rs/redpitaya/"
keywords = ["redpitaya"]
categories = ["api-bindings", "hardware-support"]
edition = "2021"
rust-version = "1.64"

[dependencies]
thiserror = "1.0"

[dependencies.iocuddle]
version = "0.1"
optional = true

[dependencies.mmap-rs]
version = "0.6"
optional = true

[dependencies.rp-sys]
path = "rp-sys"
version = "0.28"

[features]
default = ["v1_04"]
mock = ["rp-sys/mock"]
v0_98 = ["rp-sys/v0_98"]
v1_00 = ["v0_98", "rp-sys/v1_00"]
v1_03 = ["v1_00", "rp-sys/v1_03"]
v1_04 = ["v1_03", "rp-sys/v1_04"]
la = ["dma"]
dma = ["mmap-rs", "iocuddle"]

[[example]]
name = "la"
required-features = ["la"]

[package.metadata.docs.rs]
features = ["mock"]
no-default-features = true
