[package]
name = "rp-mock"
description = "Crate to mock redpitaya api"
license = "MIT"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
repository = "https://github.com/yellow-pitaya/api.git"
documentation = "https://docs.rs/rp-mock/"
keywords = ["redpitaya"]
edition = "2018"

[dependencies]
lazy_static = "1.4"
libc = "0.2"
