[package]
name = "rp-sys"
version = "0.28.1"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
description = "FFI bindings to redpitaya API"
repository = "https://github.com/yellow-pitaya/api.git"
documentation = "https://docs.rs/rp-sys"
keywords = ["redpitaya"]
license = "MIT"
categories = ["external-ffi-bindings", "hardware-support"]
edition = "2018"

[dependencies]
libc="0.2"

[dependencies.lazy_static]
version = "1.4"
optional = true

[build-dependencies]
bindgen = "0.57"

[features]
default = []
mock = ["lazy_static"]
v0_98 = []
v1_00 = ["v0_98"]
v1_03 = ["v1_00"]
v1_04 = ["v1_03"]

[badges]
travis-ci = { repository = "yellow-pitaya/api" }
gitlab = { repository = "yellow-pitaya/api" }
