[package]
name = "rp-sys"
version = "0.28.1"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
description = "FFI bindings to redpitaya API"
repository = "https://github.com/yellow-pitaya/api.git"
documentation = "https://docs.rs/rp-sys"
keywords = ["redpitaya"]
license = "MIT"
categories = ["external-ffi-bindings", "hardware-support"]
edition.workspace = true
links = "rp"

[dependencies]

[build-dependencies]
bindgen = "0.71"

[features]
default = []
mock = []
v0_98 = []
v1_00 = ["v0_98"]
v1_03 = ["v1_00"]
v1_04 = ["v1_03"]
